versioned_docs/version-2025.2.3/intro.md
---
sidebar_position: 1
---

# Home

<p>
  Seja bem-vindo ao novo sistema web para o quadro de horários do Instituto Federal do Paraná - Campus Assis Chateaubriand. 
</p>

## Histórico

| Versão    |   Início   |     Fim    | O que mudou? |
|-----------|:----------:|:----------:|:------------:|
| 2025.2.v3 | 24/08/2025 | Atual | [2025.2.v2 -> 2025.2.v3](/docs/historico/2025-2/2025-2.3) |
| [2025.2.v2](/docs/2025.2.2/intro) | 03/07/2025 | 23/08/2025 | [2025.2.v1 -> 2025.2.v2](/docs/historico/2025-2/2025-2.2) |
| [2025.2.v1](/docs/2025.2.1/intro) | 29/07/2025 | 02/08/2025 | |
| [2025.1.v9](/docs/2025.1.9/intro) | 08/06/2025 | 28/07/2025 | |
| [2025.1.v8](/docs/2025.1.8/intro) | 25/05/2025 | 07/06/2025 | |
| [2025.1.v7](/docs/2025.1.7/intro) | 12/05/2025 | 24/05/2025 | |
| [2025.1.v6](/docs/2025.1.6/intro) | 20/04/2025 | 11/05/2025 | |
| [2025.1.v5](/docs/2025.1.5/intro) | 16/03/2025 | 19/04/2025 | |
| [2025.1.v4](/docs/2025.1.4/intro) | 09/03/2025 | 15/03/2025 | |
| [2025.1.v3](/docs/2025.1.3/intro) | 23/02/2025 | 08/03/2025 | |
| [2025.1.v2](/docs/2025.1.2/intro) | 16/02/2025 | 22/02/2025 | |
| [2025.1.v1](/docs/2025.1.1/intro) | 09/02/2025 | 15/02/2025 | |


## Novidades

11/ago/2025: Lista de professores do colegiado na página do curso, com nomes e e-mails. 

17/fev/2024: Tabela de versões e mudanças.

23/jul/2023: Organização da Turma por Cursos e das Salas por Prédios

12/fev/2023: Ferramenta de busca

01/fev/2023: Versão "Em desenvolvimento" para planejamento de trocas e proxímas atualizações

## Novas funcionalidades

- Menu lateral para melhorar sua navegação.
- Fácil acesso ao horário de qualquer professor, turma, ou sala de aula.
- Tema claro e escuro.
- Configure o seu próprio horário escolhendo a forma como quer seja exibido.
  - Completo (Padrão): Será exibido o horário das aulas de todos os dias das 07:30 até as 22:40.
  - Condensado: Será exibido o horário entre a primeira e última aula, sem tirar os espaços vago.
  - Super condensado: Será exibido o horário entre a primeira e última aula, tirando os dias que não possui aula e os espaços vago.
- A cada alteração no horário será criado uma nova versão e armazenada. Sendo assim, você consegue visualizar até os horários antigo.
- Foto do horário por completo (Disponível apenas para dispositivos Android e Desktop).
